--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
   <div class="cartao">
     <div class="lado frente">
       <h1 class="info">Euzimeire</h1>
-      <p class="info">Vendedora</p>
+      <p class="info">Piccoli</p>
       <img src="img/artcar-logo.png">
     </div>
     <div class="lado verso">
       <img src="img/artcar-logo.png">
       <p>Euzimere Piccoli<br>
-        Mestre em Vendas de carro<br />
-        www.denniscalazans.com | 
-        contato@denniscalazans.com</p>
+        Mestre em Vendas de carros<br />
+        www.artcar.com.br | 
+        contato@gggggg.com</p>
     </div>
   </div>
 </div>
