--- a/index.html
+++ b/index.html
@@ -8,12 +8,9 @@
 	<div class="portaCartao">
   <div class="cartao">
     <div class="lado frente">
-      <h1 class="info">Euzimeire</h1>
-      <p class="info">Piccoli</p>
-      <img src="img/artcar-logo.png">
+      <h1 class="info">Euzimeire Piccoli</h1>
     </div>
     <div class="lado verso">
-      <img src="img/artcar-logo.png">
       <p>Euzimere Piccoli<br>
         Mestre em Vendas de carros<br />
         www.artcar.com.br | 
