--- a/index.html
+++ b/index.html
@@ -1,23 +1,31 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title></title>
+  <title></title>
   <link rel="stylesheet" type="text/css" href="cartao.css">
 </head>
+
 <body>
-	<div class="portaCartao">
-  <div class="cartao">
-    <div class="lado frente">
-      <h1 class="info">Euzimeire Piccoli</h1>
-    </div>
-    <div class="lado verso">
-      <p>Euzimere Piccoli<br>
-        Mestre em Vendas de carros<br />
-        www.artcar.com.br | 
-        contato@gggggg.com</p>
+  <div class="portaCartao">
+    <div class="cartao">
+      <div class="lado frente">
+        <h1 class="info">Euzimeire Piccoli</h1>
+        <div class="box-frente">
+          <img src="img/artcar-logo.png" alt="loja">
+        </div>
+
+      </div>
+      <div class="lado verso">
+        <p>Euzimere Piccoli<br>
+          Mestre em Vendas de carros<br />
+          artcarmultimarcas.com|
+          artcar.vendas@gmail.com</p>
+        <img class="Car" src="img/artcar-logo.png" alt="loja">
+      </div>
     </div>
   </div>
-</div>
 
 </body>
+
 </html>
